...
                app:drawableStartCompat="@drawable/ic_outline_warning_amber_16"
                app:layout_constraintBottom_toBottomOf="@+id/textViewStatus"
                app:layout_constraintStart_toEndOf="@+id/textViewStatus"
                app:layout_constraintTop_toTopOf="@+id/textViewStatus" />

            <TextView
                android:id="@+id/tVPassPhraseVerification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/stored_pass_phrase_loading"
                android:textColor="@color/colorPrimaryLight"
                android:textIsSelectable="true"
...
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/dividerUserIds"
                tools:itemCount="4"
                tools:orientation="horizontal" />

            <Button
                android:id="@+id/btnProvidePassphrase"
                style="@style/AppWidget.Button.Big"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/default_margin_content"
                android:text="@string/provide_passphrase"
                android:textAllCaps="true"
                android:visibility="gone"
...
