...
    <string name="backup_as_download_hint">This will download your key(s) as a file. Very secure option if your device
        is encrypted, or if you can keep a file stored securely. If you lose both your device and the file, your encrypted email will be unreadable, so you need to keep this file in a safe place.</string>
    <string name="backup_as_email_hint">This will back up private key(s) in your Email Inbox. The security depends on
        the strength of your pass phrase, which should be very long and hard to guess. Best option for most users.</string>
    <string name="backups_found">Backups found: %1$d.\n\n Your account is backed up correctly in your Email Inbox.</string>
    <string name="your_key_backup">Your %1$s Backup</string>
    <string name="backed_up_successfully">Backed up successfully</string>
    <string name="backup_was_not_sent">Error backing up, please try again</string>
    <string name="message_was_deleted">The message was deleted</string>
    <string name="message_was_deleted_or_labels_changed">The message was deleted or labels changed</string>
    <string name="retry">Retry</string>
    <string name="warning">Warning</string>
    <string name="no_connection">No connection</string>
...
    <string name="please_wait_while_pass_phrase_will_be_changed">Changing a pass phrase, please wait</string>
    <string name="backup_options">Backup options</string>
    <string name="change_pass_phrase">Change pass phrase</string>
    <string name="account_has_no_associated_keys">This account has no associated keys. Write us at %1$s</string>
    <string name="pass_phrase_is_too_weak">Your pass phrase is too weak</string>
    <string name="fix">fix</string>
    <string name="different_pass_phrases">Your private keys have different pass phrases</string>
    <plurals name="file_contains_some_amount_of_keys">
        <item quantity="one">[%1$s]</item>
        <item quantity="other">[%1$s] contains %2$d keys</item>
    </plurals>
    <plurals name="loaded_private_keys_from_clipboard">
        <item quantity="one">Loaded private key from your clipboard</item>
...
    <string name="auth_failure_hint_regular_accounts">Failed to log-in, please, check your account name and password in the server settings.</string>
    <string name="connection_lost">Connection lost</string>
    <string name="loading_labels">Loading labels</string>
    <string name="could_not_load_oauth_server_configuration">Couldn\'t load OAuth server configuration</string>
    <string name="all_mail">All Mail</string>
    <string name="stored_pass_phrase_loading">Stored pass phrase: loading &#8230;</string>
    <string name="stored_pass_phrase_matched">Stored pass phrase: matched</string>
    <string name="stored_pass_phrase_mismatch">Stored pass phrase: mismatch</string>
    <string name="could_not_check_pass_phrase">Could not check the pass phrase</string>
    <string name="details">Details</string>
    <string name="reply_to">Reply To</string>
    <string name="to">To</string>
    <string name="cc">Cc</string>
    <string name="bcc">Bcc</string>
    <string name="date">Date</string>
    <string name="to_receiver">To %1$s</string>
    <string name="and_others">and others&#8230;</string>
    <string name="save_pass_phrase">Save pass phrase</string>
    <string name="remember_pass_phrase_temporarily">Remember pass phrase temporarily</string>
    <string name="pass_phrase_not_provided">Pass phrase is not provided</string>
    <string name="forget_passphrase">Forget pass phrase</string>
    <string name="provide_passphrase">Provide pass phrase</string>
    <string name="your_passphrase">Your pass phrase</string>
    <string name="passphrase_purged_from_memory">Pass phrase purged from memory</string>
    <string name="no_details_about_given_key">There are no details about the given key</string>
    <string name="active_passphrase_session">Active pass phrase session</string>
...
