...
        android:id="@+id/privateKeysListFragment"
        android:name="com.flowcrypt.email.ui.activity.fragment.PrivateKeysListFragment"
        android:label="@string/keys"
        tools:layout="@layout/fragment_private_keys">
        <action
            android:id="@+id/action_privateKeysListFragment_to_privateKeyDetailsFragment"
            app:destination="@id/privateKeyDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/privateToPublicKeyDetailsFragment"
        android:name="com.flowcrypt.email.ui.activity.fragment.PrivateToPublicKeyDetailsFragment"
        android:label="@string/pub_key"
...
