...
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/email"
            android:textAllCaps="true" />

        <RadioButton
            android:id="@+id/rBDownloadOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_medium"
            android:layout_weight="1"
            android:text="@string/download"
            android:textAllCaps="true" />
    </RadioGroup>

    <Button
        android:id="@+id/btBackup"
        style="@style/AppWidget.Button.Big"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/default_margin_content"
        android:text="@string/backup_as_email"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
...
